# PyCoBotProject

./: Gui.py  TestSubsystem.py  TestSubsystem1.py  Utils.py  main.py  pyproject.toml
Subsystem/: TestSubsystem.py  TestSubsystem1.py  Vision.py  VoiceRecognition.py
Utils/: Utils.py
