[project]
name = "pycobotproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.1",
    "ffmpeg>=1.4",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "torch",
    "torchaudio>=2.5.0",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.5.0%2Bcu124-cp311-cp311-win_amd64.whl" }
